--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2018"
 
 [dependencies]
 rayon = "1.0.3"
-reqwest = "0.9.9"
+reqwest = {version = "0.10.1", features = ["blocking"]}
 serde_json = "1.0"
-scraper = "0.9.1"
+scraper = "0.11.0"
 serde = "1.0"
 serde_derive = "1.0"
+async-std = "1.5.0"
+
