--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 rayon = "1.0.3"
-reqwest = {version = "0.10.1", features = ["blocking"]}
+reqwest = {version = "0.10.1", features = ["blocking", "gzip"]}
 serde_json = "1.0"
 scraper = "0.11.0"
 serde = "1.0"
