--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ serde_derive = "1.0"
 async-std = "1.5.0"
 tokio = {version = "0.2.11", features = ["full"]}
 futures = "0.3.4"
+lazy_static = "^1.4.0"
+rand = "0.3"
 
