--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,12 @@ edition = "2018"
 
 [dependencies]
 rayon = "1.0.3"
-reqwest = {version = "0.10.1", features = ["blocking", "gzip"]}
+reqwest = {version = "0.10.1", features = ["gzip"]}
 serde_json = "1.0"
 scraper = "0.11.0"
 serde = "1.0"
 serde_derive = "1.0"
-async-std = "1.5.0"
-tokio = {version = "0.2.11", features = ["full"]}
+tokio = {version = "0.2.16", features = ["full"]}
 futures = "0.3.4"
-lazy_static = "^1.4.0"
 rand = "0.3"
 
