--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,15 @@ authors = ["metalwarrior665 <lukaskrivka@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-rayon = "1.0.3"
 reqwest = {version = "0.10.1", features = ["gzip"]}
-serde_json = "1.0"
+serde_json = "^1.0"
 scraper = "0.11.0"
-serde = "1.0"
+serde = "^1.0"
 serde_derive = "1.0"
-tokio = {version = "0.2.16", features = ["full"]}
+
 futures = "0.3.4"
 rand = "0.3"
+apify-client = "0.1.0"
+tokio = {version = "0.2.16", features = ["full"]}
+async-scoped = {version = "^0.5.1", features = ["use-tokio"]}
 
