--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ serde_json = "^1.0"
 scraper = "0.12.0"
 serde = "^1.0"
 serde_derive = "1.0"
-
+parking_lot = "^0.11"
 futures = "0.3.4"
 rand = "0.3"
 apify-client = "^0.2"
