--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["metalwarrior665 <lukaskrivka@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-reqwest = {version = "^0.11", features = ["gzip"]}
+reqwest = {version = "^0.11.22", features = ["gzip", "http3"]}
 serde_json = "^1.0"
 scraper = "0.12.0"
 serde = "^1.0"
